welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:30: error: Unmatched closing brace '}' ignored here
}
^