welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse();
	while (estFaceMur==false){
		avance();
	}
	if (getDirection()==Direction.EST){
		gauche();
		if (estFaceMur==false){ 
		avance();
		gauche();
		
	}
	
	if (getDirection()==Direction.OUEST){
		droite();
		if (estFaceMur==false){ 
		avance();
		droite();
		
		}
		
	}
	
}
	}
}
